syntax = "proto3";

package proto;

message PlayerJoinResponse {
  bool success = 1;
  float x = 2;
  float y = 3;
}